--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,12 @@
 prune .github
+prune .tox
+prune branding
+prune docs
+prune requirements
+recursive-include requirements pypi-*.txt
+recursive-include src *.py *.txt
+prune tests
+
 include .git_archival.txt
 include .gitattributes
 exclude .gitignore
@@ -8,11 +16,4 @@ exclude .readthedocs.yml
 include *.md
 include CITATION.cff
 exclude codecov.yml
-prune branding
-prune docs
-recursive-include src *.py
-include src/geovista/registry.txt
-prune src/geovista/tests
-prune requirements
-prune tests
 exclude tox.ini
