nep29 for numpy

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -13,6 +13,7 @@ dependencies:
   - cartopy >=0.20
   - click
   - click-default-group
+  - numpy >=1.21
   - platformdirs
   - pooch
   - pyproj >=3.3
