fix ci triggers

--- a/.github/workflows/ci-manifest.yml
+++ b/.github/workflows/ci-manifest.yml
@@ -5,14 +5,16 @@ name: ci-manifest
 
 on:
   pull_request:
-    branches:
-      - "*"
 
   push:
-    branches-ignore:
-      - "conda-lock-auto-update"
-      - "pre-commit-ci-update-config"
-      - "dependabot/*"
+    branches:
+      - "main"
+      - "v*x"
+      - "!conda-lock-auto-update"
+      - "!pre-commit-ci-update-config"
+      - "!dependabot/*"
+    tags:
+      - "v*"
 
   workflow_dispatch:
 
