add ci-locks gh step summary for auto-pr

--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -135,7 +135,10 @@ jobs:
     - name: "show pull-request"
       if: steps.cpr.outputs.pull-request-number != ''
       run: |
-        echo "pull-request #${{ steps.cpr.outputs.pull-request-number }}"
-        echo "pull-request URL ${{ steps.cpr.outputs.pull-request-url }}"
-        echo "pull-request operation [${{ steps.cpr.outputs.pull-request-operation }}]"
-        echo "pull-request SHA ${{ steps.cpr.outputs.pull-request-head-sha }}"
+        echo "### :rocket: Pull-Request Summary" >> ${GITHUB_STEP_SUMMARY}
+        echo "" >> ${GITHUB_STEP_SUMMARY}
+        echo "The following locks pull-request has been auto-generated:" >> ${GITHUB_STEP_SUMMARY}
+        echo "- **PR** #${{ steps.cpr.outputs.pull-request-number }}" >> ${GITHUB_STEP_SUMMARY}
+        echo "- **URL** ${{ steps.cpr.outputs.pull-request-url }}" >> ${GITHUB_STEP_SUMMARY}
+        echo "- **Operation** [${{ steps.cpr.outputs.pull-request-operation }}]" >> ${GITHUB_STEP_SUMMARY}
+        echo "- **SHA** ${{ steps.cpr.outputs.pull-request-head-sha }}" >> ${GITHUB_STEP_SUMMARY}
