enable ruff pydocstyle numpy style docstring compliance (#247)
* enable ruff pydocstyle numpy style docstring compliance

* update geovista.examples

* update geovista.__init__

* update geovista.bridge

* update geovista.cache

* update geovista.cli

* update geovista.common

* update geovista.config

* update geovista.core

* update geovista.crs

* update geovista.theme

* update geovista.search

* update geovista.samples

* update geovista.raster

* update geovista.qt

* update geovista.pantry

* update geovista.geoplotter

* update geovista.filters

* update geovista.geometry

* update geovista.geodesic

* ruff extend-exclude patterns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,23 +85,25 @@ testpaths = "tests"
 
 
 [tool.ruff]
-line-length = 88
-target-version = "py39"
-select = [
-    # pyflakes
-    "F",
-    # pycodestyle
-    "E",
-    "W",
-    # flake8-bugbear
-    "B",
-    # flake8-comprehensions
-    "C4",
-    # isort
-    "I",
-    # pyupgrade
-    "UP",
+ignore = [
+    "D105",  # pydocstyle: undocumented-magic-method
 ]
+extend-exclude = [
+    "docs",
+    "tests",
+]
+line-length = 88
+select = [
+    "B",   # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "I",   # isort
+    "E",   # pycodestyle
+    "W",
+    "D",   # pydocstyle
+    "F",   # pyflakes
+    "UP",  # pyupgrade
+]
+target-version = "py39"
 
 
 [tool.ruff.isort]
