--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -6,7 +6,7 @@ name: ci-label
 
 on:
   pull_request_target:
-    types: [opened, reopened]
+    types: [opened, edited, reopened]
 
 jobs:
   triage:
