--- a/codecov.yml
+++ b/codecov.yml
@@ -8,6 +8,7 @@ coverage:
     patch: off
 
 ignore:
-  - registry.txt
-  - pantry.py
-  - samples.py
+  - "**/geoplotter.py"
+  - "**/pantry.py"
+  - "**/registry.txt"
+  - "**/samples.py"
