--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ skip_install =
 commands =
     # inject python version pin to yaml
     cp {env:YAML} {env:WORK}
-    python -c 'from sys import version_info as v; open("{env:WORK}", "a").write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
+    python -c 'from sys import version_info as v; open("{env:WORK}", "a").write(f"\n  - python =\{v.major\}.\{v.minor\}\n{env:VTK_BUILD:}")'
     # resolve the dependencies
     conda-lock --mamba --channel conda-forge --kind explicit --file {env:WORK} --platform linux-64 --filename-template "{envname}-\{platform\}.txt"
 
