--- a/.github/workflows/composite/tox-cache/action.yml
+++ b/.github/workflows/composite/tox-cache/action.yml
@@ -2,10 +2,6 @@ name: "tox cache"
 description: "cache the tox test environment"
 
 inputs:
-  cache_build:
-    description: "tox cache build number"
-    required: false
-    default: "0"
   lock_file:
     description: "conda-lock environment requirements filename"
     required: false
@@ -17,4 +13,4 @@ runs:
     - uses: actions/cache@v3
       with:
         path: ${{ github.workspace }}/.tox
-        key: ${{ runner.os }}-tox-${{ matrix.session }}-${{ matrix.version }}-b${{ inputs.cache_build }}-${{ hashFiles(inputs.lock_file) }}
+        key: ${{ runner.os }}-tox-${{ matrix.session }}-${{ matrix.version }}-${{ hashFiles(inputs.lock_file) }}
