--- a/.github/workflows/composite/cartopy-cache/action.yml
+++ b/.github/workflows/composite/cartopy-cache/action.yml
@@ -6,10 +6,6 @@ description: "create and cache cartopy assets"
 #   - CONDA
 #
 inputs:
-  cache_build:
-    description: "conda environment cache build number"
-    required: false
-    default: "0"
   cache_period:
     description: "conda environment cache timestamp"
     required: true
@@ -24,7 +20,7 @@ runs:
       id: cartopy-cache
       with:
         path: ~/.local/share/cartopy
-        key: ${{ runner.os }}-cartopy-${{ inputs.env_name }}-p${{ inputs.cache_period }}-b${{ inputs.cache_build }}
+        key: ${{ runner.os }}-cartopy-${{ inputs.env_name }}-${{ inputs.cache_period }}
 
     - if: steps.cartopy-cache.outputs.cache-hit != 'true'
       env:
