--- a/.github/workflows/composite/conda-pkg-cache/action.yml
+++ b/.github/workflows/composite/conda-pkg-cache/action.yml
@@ -2,10 +2,6 @@ name: "conda-pkg-cache"
 description: "cache the conda environment packages"
 
 inputs:
-  cache_build:
-    description: "conda environment cache build number"
-    required: false
-    default: "0"
   cache_period:
     description: "conda environment cache timestamp"
     required: true
@@ -19,4 +15,4 @@ runs:
     - uses: actions/cache@v3
       with:
         path: ~/conda_pkgs_dir
-        key: ${{ runner.os }}-conda-pkgs-${{ inputs.env_name }}-p${{ inputs.cache_period }}-b${{ inputs.cache_build }}
+        key: ${{ runner.os }}-conda-pkg-${{ inputs.env_name }}-${{ inputs.cache_period }}
