--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,7 @@ max-complexity = 22
 
 [tool.ruff.per-file-ignores]
 "src/geovista/examples/earthquakes.py" = ["E501"]
+"src/geovista/examples/earthquakes_wink1.py" = ["E501"]
 "src/geovista/report.py" = ["E722"]
 
 
