--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -36,6 +36,7 @@ dependencies:
   - pytest >=6.0
   - pytest-cov
   - pytest-mock
+  - pytest-pyvista
 
 # documentation dependencies
   - jupyter_sphinx
