--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     hooks:
       # Prevent giant files from being committed.
     - id: check-added-large-files
+      exclude: "tests/plotting/image_cache"
       # Check whether files parse as valid Python.
     - id: check-ast
       # Check for file name conflicts on case-insensitive file-systems.
