Add --fail_extra_image_cache option
Co-authored-by: MatthewFlamm <MatthewFlamm@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ passenv =
 usedevelop =
     true
 commands =
-    pytest {posargs}
+    pytest --fail_extra_image_cache {posargs}
     {env:POST_COMMAND:}
 
 
