--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -38,6 +38,10 @@ dependencies:
   - pytest-mock
   - pytest-pyvista
 
+# examples dependencies
+  - fastparquet
+  - pandas
+
 # documentation dependencies
   - jupyter_sphinx
   - pydata-sphinx-theme
