Render with osmesa vtk in GHA CI

--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -82,7 +82,7 @@ jobs:
 
     - name: "lock (${{ matrix.version }})"
       env:
-        VTK_BUILD: "  - vtk=*=qt_*"
+        VTK_BUILD: "  - vtk=*=osmesa_*"
       run: |
         tox -e ${{ matrix.version }}-lock
 
