--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ passenv =
 usedevelop =
     true
 commands =
-    pytest {posargs}
+    pytest {posargs} --fail_extra_image_cache
     {env:POST_COMMAND:}
 
 
