--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -100,8 +100,14 @@ jobs:
       with:
         lock_file: ${{ env.LOCK_FILE }}
 
+    - name: "apt cache"
+      uses: awalsh128/cache-apt-pkgs-action@v1.3.0
+      with:
+        packages: libgl1-mesa-glx xvfb
+        version: 1.0
+
     - name: "${{ matrix.session }} (${{ matrix.version }})"
       env:
         POST_COMMAND: ${{ matrix.post-command }}
       run: |
-        tox -e ${{ matrix.version }}-${{ matrix.session }} -- ${{ matrix.posargs }}
+        xvfb-run tox -e ${{ matrix.version }}-${{ matrix.session }} -- ${{ matrix.posargs }}
