--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,8 @@ skip_install =
 
 
 [testenv:py{39,310,311}-tests]
+allowlist_externals =
+    xvfb-run
 conda_spec =
     py39: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
     py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
@@ -63,7 +65,8 @@ passenv =
 usedevelop =
     true
 commands =
-    pytest {posargs} --fail_extra_image_cache
+    xvfb-run python -c "import geovista; print(geovista.Report())"
+    xvfb-run pytest {posargs} --fail_extra_image_cache
     {env:POST_COMMAND:}
 
 
