--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,7 @@ skip_install =
 
 [testenv:py{39,310,311}-tests]
 allowlist_externals =
-    xvfb-run
+    Xvfb
 conda_spec =
     py39: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
     py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
@@ -65,8 +65,7 @@ passenv =
 usedevelop =
     true
 commands =
-    xvfb-run python -c "import geovista; print(geovista.Report())"
-    xvfb-run pytest {posargs} --fail_extra_image_cache
+    pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
     {env:POST_COMMAND:}
 
 
