codecov ignore image_cache

--- a/codecov.yml
+++ b/codecov.yml
@@ -10,6 +10,7 @@ coverage:
 ignore:
   - "**/cli.py"
   - "**/geoplotter.py"
+  - "**/image_cache"
   - "**/pantry.py"
   - "**/registry.txt"
   - "**/report.py"
