Adopt pytest-pyvista and qt/xvfb (#470)
* test of pytest-pyvista and osmesa

* add xvfb in ci

* move xvfb-run invocation

* try pytest-xvfb

* codecov ignore image_cache

* revert examples off_screen kwarg

* ignore examples codecov

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -100,8 +100,21 @@ jobs:
       with:
         lock_file: ${{ env.LOCK_FILE }}
 
+    - name: "apt cache"
+      uses: awalsh128/cache-apt-pkgs-action@v1.3.0
+      with:
+        packages: libgl1-mesa-glx xvfb
+        version: 1.0
+
     - name: "${{ matrix.session }} (${{ matrix.version }})"
       env:
         POST_COMMAND: ${{ matrix.post-command }}
       run: |
-        tox -e ${{ matrix.version }}-${{ matrix.session }} -- ${{ matrix.posargs }}
+        tox -e ${{ matrix.version }}-${{ matrix.session }} -- ${{ matrix.posargs }} --xvfb-backend xvfb
+
+    - name: "upload test images"
+      if: ${{ failure() }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-images
+        path: ${{ github.workspace }}/test_images
