--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,8 @@ skip_install =
 
 
 [testenv:py{39,310,311}-tests]
+allowlist_externals =
+    Xvfb
 conda_spec =
     py39: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
     py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
@@ -63,7 +65,7 @@ passenv =
 usedevelop =
     true
 commands =
-    pytest {posargs}
+    pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
     {env:POST_COMMAND:}
 
 
