Elevate tox pytest warnings to errors

--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ usedevelop =
     true
 commands =
     mkdir --parents {toxinidir}/test_images
-    pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
+    pytest {posargs} -W error --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
     {env:POST_COMMAND:}
 
 
