--- a/tox.ini
+++ b/tox.ini
@@ -67,7 +67,7 @@ usedevelop =
     true
 commands =
     mkdir --parents {toxinidir}/test_images
-    pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images
+    pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images -W error -W "ignore:numpy.ndarray size changed:RuntimeWarning"
     {env:POST_COMMAND:}
 
 
