Mute pooch during tox tests

--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,8 @@ platform =
 passenv =
     CODECOV_TOKEN
     POST_COMMAND
+setenv =
+    GEOVISTA_POOCH_MUTE = true
 usedevelop =
     true
 commands =
