tox explicit asset download pre-test

--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,7 @@ setenv =
 usedevelop =
     true
 commands =
+    geovista download --all
     mkdir --parents {toxinidir}/test_images
     pytest {posargs} --fail_extra_image_cache --generated_image_dir {toxinidir}{/}test_images -W error -W "ignore:numpy.ndarray size changed:RuntimeWarning"
     {env:POST_COMMAND:}
