Adopt pytest strict config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ addopts = [
     "--doctest-modules",
     "--import-mode=importlib",
     "-ra",
+    "--strict-config",
     "--strict-markers",
     "-v",
 ]
