Add minimal pytest required plugins

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ markers = [
     "image: plotter rendering image test",
 ]
 minversion = "6.0"
+required_plugins = "pytest-mock pytest_pyvista"
 testpaths = "tests"
 
 
