--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS NUMBER"
 filterwarnings = [
     "error",
     "ignore:numpy.ndarray size changed:RuntimeWarning",
-    "ignore:Unable to remesh 1 cell:UserWarning",
+    "ignore:geovista unable to remesh 1 cell:UserWarning",
     "ignore:pyvista test cache image dir:UserWarning",
     "ignore:pyvista test generated image dir:UserWarning",
 ]
