--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,9 +36,10 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: "v0.1.6"
     hooks:
+      # Linter
       - id: ruff
         types: [file, python]
-        args: [--fix]
+        args: [--fix, --show-fixes]
 
   - repo: https://github.com/codespell-project/codespell
     rev: "v2.2.6"
