ruff isort required imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ select = [
 [tool.ruff.lint.isort]
 force-sort-within-sections = true
 known-first-party = ["geovista"]
+required-imports = ["from __future__ import annotations"]
 
 
 [tool.ruff.lint.mccabe]
