--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -99,7 +99,7 @@ repos:
     hooks:
       - id: sp-repo-review
         additional_dependencies: ["repo-review[cli]"]
-        args: ["--ignore=MY100,PC140,PC180", "--show=err"]
+        args: ["--ignore=MY100,PC140,PC180", "--show=errskip"]
         # MyPy (MY)
         # - MY100: Uses MyPy (pyproject config).
         # Pre-commit (PC)
