--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,9 @@ build:
   os: ubuntu-20.04
   tools:
     python: mambaforge-4.10
+  apt_packages:
+    - libgl1-mesa-dev
+    - xvfb
   jobs:
     post_checkout:
       - git fetch --unshallow
