add sphinx-design documentation dependency

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -49,6 +49,7 @@ dependencies:
   - pydata-sphinx-theme
   - sphinx
   - sphinx-copybutton
+  - sphinx-design
   - sphinx-gallery
   - ipywidgets
   - jupyter-server-proxy
