--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
     schedule:
       # Check for updates to GitHub Actions every weekday
       interval: "daily"
+    groups:
+      dependencies:
+        patterns:
+          - "*"
     labels:
       - "new: pull request"
       - "bot"
