--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -55,6 +55,6 @@ jobs:
           labels: 'type: performance'
 
       - uses: actions-ecosystem/action-add-labels@v1
-        if: startsWith(github.event.pull_request.head.ref, 'pre-commit-ci-update-config') || startsWith(github.event.pull_request.head.ref, 'conda-lock-auto-update')
+        if: startsWith(github.event.pull_request.head.ref, 'pre-commit-ci-update-config') || startsWith(github.event.pull_request.head.ref, 'conda-lock-auto-update') || startsWith(github.event.pull_request.head.ref, 'dependabot/github_actions/actions')
         with:
           labels: 'skip changelog'
