update ci-label gha for dependabot skip changelog (#574)
* update ci-label gha for dependabot skip changelog

* review actions

--- a/.github/workflows/ci-label.yml
+++ b/.github/workflows/ci-label.yml
@@ -55,6 +55,6 @@ jobs:
           labels: 'type: performance'
 
       - uses: actions-ecosystem/action-add-labels@v1
-        if: startsWith(github.event.pull_request.head.ref, 'pre-commit-ci-update-config') || startsWith(github.event.pull_request.head.ref, 'conda-lock-auto-update')
+        if: github.actor == 'dependabot[bot]' || github.actor == 'geovista-ci[bot]' || github.actor == 'pre-commit-ci[bot]'
         with:
           labels: 'skip changelog'
