add missing cli auto-label

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,7 @@
+'type: cli':
+- any:
+  - changed-files:
+    - any-glob-to-any-file: 'src/geovista/cli.py'
 'type: dependencies':
 - any:
   - changed-files:
