nep29 drop numpy 1.22

--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -13,7 +13,7 @@ dependencies:
   - cartopy >=0.22
   - click
   - click-default-group
-  - numpy >1.21
+  - numpy >=1.23
   - platformdirs
   - pooch
   - pykdtree
