--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,7 +6,9 @@ export PYDEVD_DISABLE_FILE_VALIDATION := 1
 
 # You can set these variables from the command line, and also
 # from the environment for the first two.
-SPHINXOPTS    ?= #-W    # -W  Warnings promoted to errors
+#
+# -W  Warnings promoted to errors
+SPHINXOPTS    ?= -W
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = src
 BUILDDIR      = _build
