--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ instance/
 # Sphinx documentation
 docs/_build/
 docs/src/generated
+docs/src/reference/generated
 docs/src/sg_execution_times.rst
 
 # PyBuilder
