Refactor samples, pantry etcetera (#645)
* Move texture conveniences.

* Headers and docstrings.

* Relocate fetch_coastlines() to assets directory.

* Update __all__.

* Update sphinx domains.

* Convert cache into a module.

* Move pantry into directory.

* Rename directory to pantry.

* Move samples into pantry.

* Rename samples to meshes.

* Refactor tests.

* Fix invalid import.

* Fix invalid import.

* Update manifest.

* Re-instate root import of fetch_coastlines().

---------

Co-authored-by: Tetsuo Koyama <tkoyama010@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -11,7 +11,7 @@ ignore:
   - "**/cli.py"
   - "**/geoplotter.py"
   - "**/image_cache"
-  - "**/pantry.py"
-  - "**/registry.txt"
+  - "**/pantry/data.py"
+  - "**/pantry/meshes.py"
+  - "**/cache/registry.txt"
   - "**/report.py"
-  - "**/samples.py"
